--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<title>my title</title>
 </head>
 <body>
-  <h1>This is my repo</h1>
-  login form
+  <h1>DEmo file of a repo</h1>
+  <h2>.....</h2>
+  <hr/>
 </body>
 </html>
