updated the words.
Word's lines where interchanged,were wrong before.

--- a/guessGame.html
+++ b/guessGame.html
@@ -48,11 +48,12 @@
   <h3 style="font-size: 2em; margin-bottom: 100px; ">
   	<pre>
   		Magic!
-1.Guess a number!and pick a color accordingly.(e.g 2 and red)
+1.Guess a number!any number.
 2.Multiply it by 2.
 3.Add <span></span> to it.
 4.Divide it by 2.
 5.Subtract the number you guessed from it(e.g result-2).
+Now pick a color according to ur result(example,if result is 10,pick blue.)
 I'm gonna guess the color u picked...
     </pre>
     </h3>
